# domain-of-the-soul-society

./: .gitignore  GameLevel.py  README.md  app.py  config.py  dialogproto.py  dialogue.py  gojofight.py  main.py  models.py  pyproject.toml  run_game.sh  text2speech.py  type.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  CinematicIntro.tsx  DialogueBox.tsx  FrameAnimationPlayer.tsx  SoundManager.ts  index.css
